k8s/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    name: client
spec:
  containers:
    - name: client-container
      image: docker.io/kofeebrian/kvs-client:k8s
      resources:
        limits:
          memory: "128Mi"
          cpu: "100m"
      ports:
        - containerPort: 8000
      volumeMounts:
        - mountPath: /config
          name: client-config
  volumes:
    - name: client-config
      configMap:
        name: client-config
